--- a/vignettes/biodivercity.Rmd
+++ b/vignettes/biodivercity.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Get started with biodivercity"
-author: "Author"
+author: "Song, Xiao Ping"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
@@ -18,29 +18,33 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-Multiple frameworks to assess urban biodiversity have been proposed in both research and practice. Some conceptualise biodiversity to include genetic, phylogenetic and landscape diversity, as well as human-centric dimensions such as food provision, climate regulation and ecosystem functioning. While these frameworks offer a more comprehensive view of ‘total biodiversity’, certain components may have shortcomings in terms of their (1) causal proximity (e.g. indirect effect of landscape diversity such as forest area on diversity of other species); (2) measurability at-scale (e.g. genetic diversity, plant species diversity); and (3) precision (e.g. estimating water or thermal regulation by vegetation). Components that do not directly represent the concept of 'biodiversity' can also add complexity in decision-making, and risk contributing to mistrust or ignorance of the overall assessment. 
+Multiple frameworks to assess urban biodiversity have been proposed in both research and practice. Some conceptualise 'biodiversity' to include genetic variation, landscape structure and other human-centric dimensions such as climate regulation and ecosystem functioning. While these offer a more comprehensive view of ‘total biodiversity’, certain components may have shortcomings in terms of their (1) causal proximity (e.g. indirect effect of the landscape on the diversity of other species); (2) measurability at-scale (e.g. genetic diversity, plant species diversity); and (3) precision (e.g. estimating water or thermal regulation by vegetation). In decision-making, unnecessary complexity may also risk contributing to mistrust or ignorance of the overall assessment. 
 
-The package `biodivercity` provides a way to directly assess the _habitat value_ of urban landscapes for a chosen animal group (taxon). The key features include:
+`biodivercity` is an R package for assessing the diversity of animal species in urban areas. It provides a way to directly assess the _habitat value_ of urban landscapes, based on their empirical effect on chosen animal groups (taxa). Examples for birds, butterflies, odonates and amphibians are provided. The key features include:
 
-- Provide step-by-step protocols for random point sampling of an animal group within areas of interest (for model building and validation). Examples for birds, butterflies, odonates and amphibians are provided.
-- Download and process relevant landscape data for building empirical models (e.g. spatial patterns of land cover from Sentinel-2 satellite imagery, urban density from OpenStreetMap).
-- Build predictive models of local (alpha) and community (beta) diversity for an animal group.
-- Use models to make pixel-based spatial predictions across the landscape, at a specified spatial resolution.
-- Validate model predictions with new data.
-- Derive total (gamma) diversity for the chosen animal group, based on its local and community diversity.
-- Summarise predicted pixel values within custom areas (e.g. within zones used in city planning).
+- Step-by-step protocols for random point sampling of an animal group within areas of interest.
+- Generate data summaries of the animals surveyed at multiple levels (e.g. areas, periods, animal groups, species).
+- Download and process landscape predictors within areas of interest (e.g. satellite imagery, OpenStreetMap data).
+- Build and validate predictive models to assess local (alpha), community (beta) and total (gamma) diversity for an animal group.
+- Convert vector data generated from future design scenarios into formats suitable for model predictions.
+- Use models to make pixel-based spatial predictions across new areas, for both monitoring and future scenario planning purposes.
+- Summarise predictions for city-wide scoring and benchmarking (i.e. allow comparisons to be made between zones used in city planning).
 
 <br>
 
-## Installation
+```{r out.width = "70%", fig.align='center', dpi = 300, echo = FALSE, fig.cap="**Figure: Broad overview of the data workflow for an animal group**"}
+knitr::include_graphics("framework.jpeg", dpi = 300)
+```
+
+<br>
+
+## Setup
 
 Install the development version of `biodivercity` from GitHub:
 
 ```{r, eval = FALSE}
 devtools::install_github("ecological-cities/biodivercity", ref = "main")
 ```
-
-## Setup
 
 Load the package:
 
@@ -53,6 +57,11 @@ devtools::load_all() # to knit manually w latest changes (not built/installed ye
 # vignette will be checked in R-CMD check & package build (should use library(home2park))
 ```
 
+<br>
+
+## Data sources
+
+Development of a Biodiversity Index for Residential Towns using Biodiversity Field Surveys. 14 June 2016, 6.5 years, Ministry of National Development Research Fund (MNDRF) Grant, $1,286,979.79. Awarded to the National University of Singapore (host institution) and the Singapore Housing Development Board. 
 
 <br>
 
@@ -61,10 +70,4 @@ devtools::load_all() # to knit manually w latest changes (not built/installed ye
 Baker, D. J., Maclean, I. M., Goodall, M., & Gaston, K. J. (2021). Species distribution modelling is needed to support ecological impact assessments. _Journal of Applied Ecology_, _58_(1), 21-26.
 
 Soto-Navarro, C. A., Harfoot, M., Hill, S. L. L., Campbell, J., Mora, F., Campos, C., ... & Burgess, N. D. (2021). Towards a multidimensional biodiversity index for national application. _Nature Sustainability_, 1-10.
-
-
-
-
-
-
 
