rename filter_obs() to filter_observations(); sptally_extractor() to tally_observations(); sac_extractor() to calculate_sac(). Makes the use of the function more intuitive. Pls take note @edwintyw. Will not re-build pkgdown site; you can do so if you want changes incorporated in Q22 progress report
- made respective changes in examples, tests and vignettes

--- a/vignettes/more/animals-data-summaries.Rmd
+++ b/vignettes/more/animals-data-summaries.Rmd
@@ -36,7 +36,7 @@ normalised_perpt <-
   for(j in 1:nrow(unique)){
   
     sptally_data <- 
-      sptally_extractor(observations = fauna_normalised[[i]],
+      tally_observations(observations = fauna_normalised[[i]],
                         survey_ref = surveys_normalised[[i]],
                         specify_town = unique$town[j], 
                         specify_round = unique$round[j], 
@@ -89,7 +89,7 @@ plot_sac <-
   
   for(j in 1:nrow(unique)){
     
-    sac_data <- sac_extractor(observations = fauna[[i]], 
+    sac_data <- calculate_sac(observations = fauna[[i]], 
                               survey_ref = surveys[[i]],
                               specify_town = unique$town[j], 
                               specify_round = unique$round[j], 
