--- a/vignettes/process-animal.Rmd
+++ b/vignettes/process-animal.Rmd
@@ -12,16 +12,17 @@ vignette: >
 
 ## Process survey data
 
-Collected fauna survey data in the format detailed in the previous section can be easily subset with respect to `town`, `round` and/or `priority` with the `filter_obs` function. For example, a specific set of surveys (i.e. butterfly surveys in Tampines from 2020-2021) can be filtered as follows:
+Collected fauna survey data in the format detailed in the previous section can be easily subset with respect to `town`, `round` and/or `priority` with the `filter_observations()` function. For example, a specific set of surveys (i.e. butterfly surveys in Tampines from 2020-2021) can be filtered as follows:
 
 ```{r filter_obs example, eval = FALSE}
 data(fauna)
 data(surveys)
 
-butterflies_tampines_round_2 <- filter_obs(observations = fauna, survey_ref = surveys,
-                   specify_taxon = "Lepidoptera",
-                   specify_area = "TP",
-                   specify_period = "2")
+butterflies_tampines_round_2 <- 
+  filter_observations(observations = fauna, survey_ref = surveys,
+                      specify_taxon = "Lepidoptera",
+                      specify_area = "TP",
+                      specify_period = "2")
 ```
 
 Checks are then performed to remove uncertain fauna identifications to prevent over-counting. 
