--- a/vignettes/more/animals-survey-protocols.Rmd
+++ b/vignettes/more/animals-survey-protocols.Rmd
@@ -16,19 +16,21 @@ This article describes how surveys were carried out for the example data in this
 
 ### Sampling point generation
 
-Before surveys can begin, survey points are randomly generated to best represent the area of interest and its variables. If new data in previous or new areas of interest is to be collected, more points can be randomly generated with respect to the two land cover types: `Urban` and `Forest`. 
+Before surveys can begin, survey points are randomly generated to best represent the area of interest. If new data is to be collected, survey points can be randomly generated with respect to the two land cover types: `Urban` and `Forest`. 
 
-The following example covers how the residential town of Queenstown is randomly sampled at a point density of one point per 50 hectares, with a survey radius of 50 m for each point. An excess modifier of `1.5` is set to generate `1.5` times more points than is required for the specified point density, in case points were determined to be inaccessible later in the Survey Period.
+The following example covers how the residential town of Queenstown can be randomly sampled at a point density of one point per 50 hectares, with a survey radius of 50 m for each point. An excess modifier of `1.5` can be set to generate `1.5` times the points that are required for the specified point density, in case any of the points were determined to be inaccessible later in the Survey Period.
 
 First, load main libraries for this analysis.
 
 ```{r load required libraries, eval = FALSE}
 library("biodivercity")
 library("dplyr")
+library("ggplot2")
 ```
 
 ```{r load libraries while in dev, include = FALSE}
 library("dplyr")
+library("ggplot2")
 
 # use either library (having installed package with latest changes) or load_all (package in development)
 devtools::load_all() #knit manually with latest changes to circumvent library("biodivercity") (use in final version)
@@ -66,7 +68,7 @@ ggplot(data = queenstown) +
 <br>
 
 
-If there is a need to retain survey points from a previous period, the example below shows how new points can be generated without overlap. Here, the file path to a shapefile with the previous survey points is given to the argument `retain`. Load example points within the same area of Queenstown and from period `1` to simulate point selection for re-surveying in Survey Period 2. If only half of the previous points are to be retained, the proportion `retain_prop` can be set to `"0.5"`.  
+If there is a need to retain survey points from a previous Survey Period, the example below shows how new points can be generated without overlap. Here, the file path to a shapefile with the previous survey points is given to the argument `retain`. Load the example points within the same area of Queenstown from period `1` to simulate point selection for re-surveying in a subsequent Survey Period 2. If only half of the previous points are to be retained, the proportion `retain_prop` can be set to `"0.5"`.  
 
 ```{r random point generation with retain, eval = FALSE}
 data("sampling_points")
@@ -82,13 +84,13 @@ points <- random_pt_gen(x = queenstown,
                         excess_modifier = 1.5)
 ```
 
-After obtaining the generated points, surveyors are to then assess the points and the surrounding areas up to the above buffer radius for potential on-site disturbances to wild animals. Approved points are then selected according to the order in which they were generated (i.e. the point `id`) to maintain randomness.
+After obtaining the generated points, surveyors are to then assess the points and the surrounding areas up to the above buffer radius (50 m) for potential on-site disturbances to wild animals. Approved points are then selected according to the order in which they were generated (i.e. the point `id`) to maintain randomness.
 
 ---
 
 ### Animal data collection format
 
-To conduct new surveys or to build models on existing data, the format in which the data is organised is shown below. Animal data is separated into the survey data and survey info datasets, where the former includes the individual observation records and the latter contains meta information on each 30 minutes survey.
+To conduct new surveys or to build models on collected data, the format in which the data is organised for analysis is shown below. Animal data is separated into the survey data and survey info datasets, where the former includes the individual observation records and the latter contains meta information on each 30 minutes survey.
 
 ```{r sample data table, echo = FALSE, message = FALSE, warning = FALSE}
 
@@ -109,11 +111,11 @@ knitr::kable(head(animal_surveys), caption = "**Sample survey info format**") %>
 
 ## Animal survey methods
 
-The general animal survey protocol consisted of **30 minute** surveys in the designated buffer radius around the generated points once every two months for a year (6 cycles per Survey Round). Surveyors can move within the area to identify and count any species belonging to the priority taxon of each survey. 
+The general animal survey protocol consisted of **30 minute** surveys in the designated buffer radius around the generated points once every two months for a year (6 cycles per Survey Period). Surveyors can move within the area to identify and count any species belonging to the priority taxon of each survey. Each encounter is recorded according to the species, with further details on the time, abundance and distance from center point.
 
 ![**Figure**: Diagram of animal surveys within the respective buffer radii. Data recorded for each species observation is also shown here.](survey-diagram.png)
 
-Survey time windows and buffer radii varied for each priority taxon and were chosen based on previous research. The four priority animal taxa surveyed and included in the example data are shown in the table below with their specific survey details. 
+Survey time windows and buffer radii varies for each priority taxon and they were chosen based on previous research. The four priority animal taxa surveyed and included in the example data are shown in the table below with their specific survey details. 
 
 ```{r survey type table, echo = FALSE, fig.align='center'}
 
